--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         
       </div>
       <div class="player-options">
+        <form name="auswahlliste" >
+          <label>
+            <select class="dropdownmenue" name="auswahllinks">
+              <option value="" hidden>kbit/s FLAC</option>
+              <option value="728">728 kbit/s FLAC</option>
+              <option value="320">320 kbit/s MP3</option>
+              <option value="192">192 kbit/s MP3</option>
+              <option value="64">64 kbit/s AAC++</option>
+            </select>
+          </label>
+        </form>
         <ul class="menu">
           <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option1"></a></li>
           <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option2"></a></li>
