--- a/index.html
+++ b/index.html
@@ -12,9 +12,30 @@
       <div class="player-info">
         <img src="./listen.png" alt="DJ Image" class="dj-img">
         <div class="dj-info">
-          <div class="info">
-            <h2 class="dj-name">DJ Name</h2>
-            <button class="btn">Contact</button>
+          <div class="info-player-options">
+            <div class="info">
+              <h2 class="dj-name">DJ Name</h2>
+              <button class="btn">Contact</button>
+            </div>
+            <div class="player-options">
+              <form name="auswahlliste" >
+                <label>
+                  <select class="dropdownmenue" name="auswahllinks">
+                    <option value="" hidden>kbit/s FLAC</option>
+                    <option value="728">728 kbit/s FLAC</option>
+                    <option value="320">320 kbit/s MP3</option>
+                    <option value="192">192 kbit/s MP3</option>
+                    <option value="64">64 kbit/s AAC++</option>
+                  </select>
+                </label>
+              </form>
+              <ul class="menu">
+                <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option1"></a></li>
+                <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option2"></a></li>
+                <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option3"></a></li>
+                <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option4"></a></li>
+              </ul>
+            </div>
           </div>
           <div class="track-info">
             <img src="music-notes.png" alt="Track" class="small-track-img">
@@ -24,28 +45,7 @@
             </div>
           </div>
         </div>
-        
       </div>
-      <div class="player-options">
-        <form name="auswahlliste" >
-          <label>
-            <select class="dropdownmenue" name="auswahllinks">
-              <option value="" hidden>kbit/s FLAC</option>
-              <option value="728">728 kbit/s FLAC</option>
-              <option value="320">320 kbit/s MP3</option>
-              <option value="192">192 kbit/s MP3</option>
-              <option value="64">64 kbit/s AAC++</option>
-            </select>
-          </label>
-        </form>
-        <ul class="menu">
-          <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option1"></a></li>
-          <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option2"></a></li>
-          <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option3"></a></li>
-          <li class="menu-option"><a href="#"><img src="./music-store-app.png" alt="Option4"></a></li>
-        </ul>
-      </div>
-      
     </div>
     <audio controls class="audio-player">
       <source src="song.mp3" type="audio/mp3">
